--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: "Christian Surname"
-tagline: "Resume Builder"
+title: "R M Carrasco"
+tagline: "Codename.Rainier"
 description: "Welcome to the Resume Builder. You can create your own resume by adding a few markdown files, tweaking values in a a config file and changing some CSS"  
-baseurl: "/resume-builder" # the subpath of your site, e.g. /blog/
+baseurl: "/website" # the subpath of your site, e.g. /blog/
 #url: "" # the base hostname & protocol for your site
 
 # Collections-builder
