--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ colour:
     text: 1a1a1a # sets text colour
     alternatestripe: 263248 # sets the alternate background stripe
     
-bgimage: "Wisar3.jpg" # set hero image here. add file name and place in Images folder
+bgimage: "Wisar3oil.jpg" # set hero image here. add file name and place in Images folder
 
 # Build settings
 markdown: kramdown
