--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ collections:
         title: Interest
     contributions:
         output: true
-        title: contribution
+        title: contributions
     publications:
         output: true
         title: Publication
