--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ collections:
         output: false
         title: Interest
     contributions:
-        output: true
+        output: false
         title: contributions
     publications:
         output: true
